# mindsong-voice-foundry-clean

./: .gitignore  pyproject.toml
reports/: RC-2.1_RELEASE_REPORT_2026-04-28.md  RC-2_RELEASE_REPORT_2026-04-28.md  STUDIO_GRADE_VOICE_RESEARCH_2026-04-28.md
scripts/: start_server.sh
src/api/: server.py  utils.py
src/api/routes/: bakeoff.py  health.py  master.py  qc.py  synthesize.py
src/engine/: chatterbox_engine.py  f5tts_engine.py  voxcpm2_engine.py
src/post/: mix_chain.py
src/presets/: preset_defaults.py
tests/: conftest.py  test_health.py  test_security.py  test_synthesize.py
tests/e2e/: browser-voice-foundry.spec.ts
