[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindsong-voice-foundry"
version = "0.1.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast tests with no model loading",
    "integration: real F5/VoxCPM2 synthesis tests",
    "slow: slow tests including Chatterbox bakeoff",
]
testpaths = ["tests"]
